--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -17,7 +17,7 @@
               </div>
             </div>
             <div class="col-lg-6">
-              <img src="img/bg/header-img.png" alt="header-img" class="header-img"/>
+              <img src="<%= root_url %>img/bg/header-img.png" alt="header-img" class="header-img"/>
             </div>
           </div>
         </div>
@@ -29,6 +29,7 @@
   </section>
   <!-- slider-area-end -->
   <!-- booking-area -->
+  <!--
   <section id="booking" class="booking-area p-relative">
     <div class="container">
       <form action="#" class="contact-form" >
@@ -73,6 +74,7 @@
       </form>
     </div>
   </section>
+  -->
   <!-- booking-area-end -->
 
   <!-- services-area -->
@@ -91,7 +93,7 @@
         <div class="col-lg-4 col-md-12">
           <div class="s-single-services text-center active" >
             <div class="services-icon">
-              <img src="img/icon/sr-icon01.png" alt="img">
+              <img src="<%= root_url %>img/icon/sr-icon01.png" alt="img">
             </div>
             <div class="second-services-content">
               <h5><a href="services-detail.html">Online Emergency</a></h5>
@@ -115,7 +117,7 @@
         <div class="col-lg-4 col-md-12">
           <div class="s-single-services text-center" >
             <div class="services-icon">
-              <img src="img/icon/sr-icon03.png" alt="img">
+              <img src="<%= root_url %>img/icon/sr-icon03.png" alt="img">
             </div>
             <div class="second-services-content">
               <h5><a href="services-detail.html">24hr Health Program</a></h5>
@@ -138,7 +140,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-12 col-sm-12">
           <div class="s-about-img p-relative">
-            <img src="img/bg/illlustration.png" alt="img">
+            <img src="<%= root_url %>img/bg/illlustration.png" alt="img">
 
           </div>
         </div>
@@ -186,7 +188,7 @@
       <div class="row align-items-end">
         <div class="col-lg-3 col-md-6 col-sm-12">
           <div class="single-counter text-center" >
-            <img src="img/icon/cunt-icon01.png" alt="img">
+            <img src="<%= root_url %>img/icon/cunt-icon01.png" alt="img">
             <div class="counter p-relative">
               <span class="count">500</span><small>+</small>
             </div>
@@ -195,7 +197,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12">
           <div class="single-counter text-center" >
-            <img src="img/icon/cunt-icon02.png" alt="img">
+            <img src="<%= root_url %>img/icon/cunt-icon02.png" alt="img">
             <div class="counter p-relative">
               <span class="count">58796</span><small>+</small>
             </div>
@@ -204,7 +206,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12">
           <div class="single-counter text-center" >
-            <img src="img/icon/cunt-icon03.png" alt="img">
+            <img src="<%= root_url %>img/icon/cunt-icon03.png" alt="img">
             <div class="counter p-relative">
               <span class="count">500</span><small>+</small>
             </div>
@@ -213,7 +215,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12">
           <div class="single-counter text-center" >
-            <img src="img/icon/cunt-icon04.png" alt="img">
+            <img src="<%= root_url %>img/icon/cunt-icon04.png" alt="img">
             <div class="counter p-relative">
               <span class="count">200</span><small>+</small>
             </div>
@@ -237,7 +239,7 @@
           <ul>
             <li>
               <div class="icon">
-                <div><img src="img/icon/de-icon01.png" alt="de-icon"></div></div>
+                <div><img src="<%= root_url %>img/icon/de-icon01.png" alt="de-icon"></div></div>
               <a href="departments-detail.html" class="text">
                 <h3>Pedlatric</h3>
                 Fusce eget condimentum lectus, sed commodo dui. Suspendisse non vehicula ant aecenas placerat finibus metus, at finibus neque.
@@ -245,7 +247,7 @@
             </li>
             <li>
               <div class="icon">
-                <div><img src="img/icon/de-icon02.png" alt="de-icon"></div></div>
+                <div><img src="<%= root_url %>img/icon/de-icon02.png" alt="de-icon"></div></div>
               <a href="departments-detail.html" class="text">
                 <h3>Dental</h3>
                 Fusce eget condimentum lectus, sed commodo dui. Suspendisse non vehicula ant aecenas placerat finibus metus, at finibus neque.
@@ -253,7 +255,7 @@
             </li>
             <li>
               <div class="icon">
-                <div><img src="img/icon/de-icon03.png" alt="de-icon"></div></div>
+                <div><img src="<%= root_url %>img/icon/de-icon03.png" alt="de-icon"></div></div>
               <a href="departments-detail.html" class="text">
                 <h3>Physicians</h3>
                 Fusce eget condimentum lectus, sed commodo dui. Suspendisse non vehicula ant aecenas placerat finibus metus, at finibus neque.
@@ -264,7 +266,7 @@
         </div>
         <div class="col-lg-6">
           <div class="s-d-img p-relative">
-            <img src="img/bg/de-illustration.png" alt="img">
+            <img src="<%= root_url %>img/bg/de-illustration.png" alt="img">
 
           </div>
 
@@ -291,7 +293,7 @@
           <div class="single-team mb-30" >
             <div class="team-thumb">
               <div class="brd">
-                <img src="img/team/team01.png" alt="img">
+                <img src="<%= root_url %>img/team/team01.png" alt="img">
               </div>
 
               <div class="dropdown">
@@ -322,7 +324,7 @@
           <div class="single-team mb-30" >
             <div class="team-thumb">
               <div class="brd">
-                <img src="img/team/team02.png" alt="img">
+                <img src="<%= root_url %>img/team/team02.png" alt="img">
               </div>
               <div class="dropdown">
                 <a class="xbtn"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -723,8 +725,8 @@
           <div class="single-post mb-30" >
             <div class="blog-thumb">
               <a href="blog-details.html">
-                <img src="img/blog/blog_img01.jpg" alt="img">
-                <img src="img/bg/b-link.png" alt="b-link" class="b-link">
+                <img src="<%= Rails.root %>img/blog/blog_img01.jpg" alt="img">
+                <img src="<%= Rails.root %>img/bg/b-link.png" alt="b-link" class="b-link">
               </a>
             </div>
             <div class="blog-content text-center">
