--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -1,16 +1,18 @@
 <div class="container mt-4">
 
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <h2>Your Hospitals</h2>
-    <%= link_to new_hospital_path, class: "btn btn-success" do %>
-      <i class="fas fa-plus"></i> <!-- Add new hospital icon -->
+    <h2>Hospitals</h2>
+    <% if signed_in? %>
+      <%= link_to new_hospital_path, class: "btn btn-success" do %>
+        <i class="fas fa-plus"></i> <!-- Add new hospital icon -->
+      <% end %>
     <% end %>
   </div>
 
   <% if @hospitals.any? %>
-    <div class="row">
+    <div class="row pb-4">
       <% @hospitals.each do |hospital| %>
-        <div class="col-md-6 col-lg-6 mb-6">
+        <div class="col-md-6 col-lg-6 mb-6 mt-4">
           <div class="card shadow-sm h-100">
             <div class="card-body">
               <h5 class="card-title"><%= hospital.name %></h5>
@@ -26,13 +28,16 @@
                 <i class="fas fa-eye"></i>
               <% end %>
 
-              <%= link_to edit_hospital_path(hospital), class: "btn btn-sm", title: "Edit" do %>
-                <i class="fas fa-edit"></i>
-              <% end %>
-
-              <%= link_to hospital, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-sm", title: "Delete" do %>
-                <i class="fas fa-trash-alt"></i>
-              <% end %>
+              <% if signed_in? %>
+                <% if current_user.id == hospital.user_id %>
+                  <%= link_to edit_hospital_path(hospital), class: "btn btn-sm", title: "Edit" do %>
+                    <i class="fas fa-edit"></i>
+                  <% end %>
+                <% end %>
+                <%= link_to new_hospital_appointment_path(hospital), class: "btn btn-primary btn-sm" do %>
+                  <i class="fa fa-calendar-check"></i>
+                <% end %>
+            <% end %>
             </div>
           </div>
         </div>
