--- a/app/views/hospitals/show.html.erb
+++ b/app/views/hospitals/show.html.erb
@@ -44,7 +44,13 @@
       <hr>
 
       <div class="d-flex justify-content-between">
-        <%= link_to "Edit", edit_hospital_path(@hospital), class: "btn btn-primary" %>
+
+        <%= link_to "Edit", edit_hospital_path(@hospital), class: "btn btn-primary" if signed_in? && current_user.id == @hospital.user_id %>
+        <% if signed_in? %>
+          <%= link_to new_hospital_appointment_path(hospital), class: "btn btn-primary btn-sm ms-2" do %>
+            <i class="fa fa-calendar-check"></i> Book Appointment
+          <% end %>
+        <% end %>
         <%= link_to "Back", hospitals_path, class: "btn btn-secondary" %>
       </div>
 
