--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,31 +1,3 @@
-<head>
-  <title>V2care</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-
-  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-  <%= javascript_importmap_tags %>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title> Mecare – Hospital and Health HTML Template </title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-  <!-- Place favicon.ico in the root Internist, General Practitonery -->
-
-  <!-- CSS here -->
-  <link rel="stylesheet" href="<%= root_url %>css/bootstrap.min.css">
-  <link rel="stylesheet" href="<%= root_url %>css/animate.min.css">
-  <link rel="stylesheet" href="<%= root_url %>/css/magnific-popup.css">
-  <link rel="stylesheet" href="<%= root_url %>/fontawesome/css/all.min.css">
-  <link rel="stylesheet" href="<%= root_url %>/css/dripicons.css">
-  <link rel="stylesheet" href="<%= root_url %>/css/slick.css">
-  <link rel="stylesheet" href="<%= root_url %>/css/default.css">
-  <link rel="stylesheet" href="<%= root_url %>/css/meanmenu.css">
-  <link rel="stylesheet" href="<%= root_url %>/css/style.css">
-  <link rel="stylesheet" href="<%= root_url %>/css/responsive.css">
-</head>
 <header class="header-area">
   <div class="header-top second-header d-none d-md-block">
     <div class="container">
@@ -62,7 +34,7 @@
   </div>
   <div id="header-sticky" class="menu-area">
     <div class="container">
-      <div class="second-menu">
+        <div class="second-menu">
         <div class="row align-items-center">
           <div class="col-xl-2 col-lg-2">
             <div class="logo">
@@ -75,54 +47,54 @@
                 <ul>
                   <li class="has-sub">
                     <a href="/">Home</a>
-                    <ul>
-                      <li><a href="index-2.html">Home Page 01</a></li>
-                      <li><a href="index-3.html">Home Page 02</a></li>
-                      <li><a href="index-4.html">Home Page 03</a></li>
-                    </ul>
+<!--                    <ul>-->
+<!--                      <li><a href="index-2.html">Home Page 01</a></li>-->
+<!--                      <li><a href="index-3.html">Home Page 02</a></li>-->
+<!--                      <li><a href="index-4.html">Home Page 03</a></li>-->
+<!--                    </ul>-->
                   </li>
                   <li>
-                    <%= link_to 'Appointment', new_appointment_path %>
+                    <%= link_to 'Appointment', appointments_path %>
                   </li>
-                  <li class="has-sub">
-                    <a href="services.html">Services</a>
-                    <ul>
-                      <li><a href="services.html">Services</a></li>
-                      <li><a href="services-detail.html">Services Details</a></li>
-                    </ul>
+                  <li>
+                    <a href="<%= services_homes_path %>">Services</a>
+<!--                    <ul>-->
+<!--                      <li><a href="/">Services</a></li>-->
+<!--                      <li><a href="/">Services Details</a></li>-->
+<!--                    </ul>-->
                   </li>
                   <li class="has-sub"><a href="<%= hospitals_path %>">Hospitals</a>
                     <ul>
-                      <li><a href="pricing.html">List</a></li>
-                      <li><a href="team.html">New</a></li>
-                      <li><a href="shop.html">Shop</a></li>
-                      <li><a href="shop-details.html">Shop Details</a></li>
+                      <li><a href="<%= hospitals_path %>">List</a></li>
+                      <li><a href="<%= new_hospital_path %>">Add</a></li>
+<!--                      <li><a href="shop.html">Shop</a></li>-->
+<!--                      <li><a href="shop-details.html">Shop Details</a></li>-->
                     </ul>
                   </li>
-                  <li class="has-sub">
-                    <a href="departments.html">Departments</a>
-                    <ul>
-                      <li><a href="departments.html">Departments</a></li>
-                      <li><a href="departments-detail.html">Departments Details</a></li>
-                    </ul>
-                  </li>
+<!--                  <li class="has-sub">-->
+<!--                    <a href="departments.html">Departments</a>-->
+<!--                    <ul>-->
+<!--                      <li><a href="departments.html">Departments</a></li>-->
+<!--                      <li><a href="departments-detail.html">Departments Details</a></li>-->
+<!--                    </ul>-->
+<!--                  </li>-->
 
                   <% if signed_in? %>
                     <li class="has-sub">
-                      <a>User</a>
+                      <a><i class="fa fa-user"></i> <%= current_user.email.split('@').first.titleize %></a>
                       <ul>
                         <li>
                           <%= link_to "Logout", destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "nav-link" %>
                         </li>
-                        <li><a href="blog-details.html">Blog Details</a></li>
+<!--                        <li><a href="blog-details.html">Blog Details</a></li>-->
                       </ul>
                     </li>
                   <% else %>
                     <li class="has-sub">
-                    <a href="<%= new_user_session_path %>">Log In</a>
+                      <a href="<%= new_user_session_path %>"><i class="fa fa-user"></i> Log In</a>
                     <ul>
-                      <li><a href="<%= new_user_registration_path %>">Register</a></li>
-                      <li><a href="blog-details.html">Blog Details</a></li>
+                      <li><a href="<%= new_user_registration_path %>"><i class="fa fa-user-plus"></i> Register</a></li>
+<!--                      <li><a href="blog-details.html">Blog Details</a></li>-->
                     </ul>
                     </li>
                   <% end %>
