--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <%= render 'layouts/header' %>
+  <%= render 'layouts/head' %>
   <body>
+  <%= render 'layouts/header' %>
   <% flash.each do |key, message| %>
     <div class="alert alert-<%= bootstrap_class_for(key) %> flash-message">
       <%= message %>
@@ -108,7 +109,7 @@
         <div class="row">
           <div class="col-12">
             <div class="copyright-text text-center">
-              <p>&copy; 2020 Mecare  All design Zcube.</p>
+              <p>&copy; <%= Time.now.year %> MedSlot All design.</p>
             </div>
           </div>
         </div>
