--- a/app/views/hospitals/show.html.erb
+++ b/app/views/hospitals/show.html.erb
@@ -47,7 +47,7 @@
 
         <%= link_to "Edit", edit_hospital_path(@hospital), class: "btn btn-primary" if signed_in? && current_user.id == @hospital.user_id %>
         <% if signed_in? %>
-          <%= link_to new_hospital_appointment_path(hospital), class: "btn btn-primary btn-sm ms-2" do %>
+          <%= link_to new_hospital_appointment_path(@hospital), class: "btn btn-primary btn-sm ms-2" do %>
             <i class="fa fa-calendar-check"></i> Book Appointment
           <% end %>
         <% end %>
