--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,9 +36,9 @@
     <div class="container">
         <div class="second-menu">
         <div class="row align-items-center">
-          <div class="col-xl-2 col-lg-2">
+          <div class="col-xl-3 col-lg-3">
             <div class="logo">
-              <a href="/"><img src="<%= root_url %>img/logo/logo.png" alt="logo"></a>
+              <a href="/"><img src="<%= root_url %>img/logo/logo-new.png" alt="logo"></a>
             </div>
           </div>
           <div class="col-xl-8 col-lg-8">
