--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,7 +189,7 @@ label {
 	border-top: 1px solid #f2f2f2
 }
 .logo {
-    background: #fff;
+    background: none;
     height: 115px;
     margin-top: -55px;
     line-height: 115px;
