--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,10 @@
           <div class="col-xl-3 col-lg-3 col-sm-6">
             <div class="footer-widget mb-30">
               <div class="flog mb-35">
-                <a href="#"><img src="<%= root_url %>img/logo/logo.png" alt="logo"></a>
+                <a href="#"><img src="<%= root_url %>img/logo/logo-new.png" alt="logo"></a>
               </div>
               <div class="footer-text mb-20">
-                <p>Sed ut perspiciatis unde om is nerror sit voluptatem accustium dolorem tium totam rem aperam eaque ipsa quae ab illose
-                  inntore veritatis</p>
+                <p>Find the right doctor, choose your preferred time, and confirm your appointment in seconds. Your path to better care starts with effortless booking.</p>
               </div>
               <div class="footer-social">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
