--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3862,7 +3862,7 @@ margin-left:0;
     width: 100%;
 
 }
-.sidebar-widget .widget li.page_item_has_children,
+.sidebar-widget .widget li.page_item_has_children
  {
     padding-bottom: 0;
 }
